fixed mobile layout bug and changed img format from png to webp

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   /* outline: 1px solid lightgreen; */
+  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -20,13 +21,18 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
+  min-height: 100vh; /* Changing to 100vh removes the overflow but breaks mobile layout */
+  flex-direction: column;
+  width: 80%;
+  margin: 0 auto;
 }
 
 /* landing */
 
 .landing-page {
   position: relative;
-  background: url(imgs/background.png) no-repeat;
+  background: url(imgs/background.webp) no-repeat;
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -127,7 +133,7 @@ h1 {
 }
 
 .menu__text {
-  padding-right: 10px;
+  margin-right: 10px;
   font-size: 1.5rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -202,22 +208,15 @@ h1 {
     brightness(117%) contrast(100%); /* This changes the svg color, in this case to white */
 }
 
-.introduction.container {
-  color: white;
-  flex-direction: column;
-  width: 80%;
-  margin: 0 auto;
-}
-
 .introduction__title {
   font-size: 2rem;
-  margin-top: 4em;
+  margin-top: 2em;
   margin-bottom: 0.5em;
   text-align: center;
 }
 
 .paragraph {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 .card__icon {
@@ -227,14 +226,19 @@ h1 {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   width: 90px;
   height: 90px;
 }
 
-.features__card .paragraph,
-.card__title {
+.features__card .card__title,
+.paragraph {
   text-align: center;
+}
+
+#introduction,
+#testimonials {
+  background-color: black;
 }
 
 @keyframes glow {
@@ -270,6 +274,15 @@ h1 {
     text-decoration: underline;
     transform: scale(1.1);
     animation: glow 2.5s linear infinite;
+  }
+  .introduction__title {
+    margin-top: 4em;
+  }
+  .card__icon {
+    margin-bottom: 2em;
+  }
+  .paragraph {
+    margin-bottom: 4em;
   }
 }
 /*
